<?xml version="1.0" encoding="utf-8"?>
<!-- strings.xml -->
<resources>
    <string name="app_name">Device LAB</string>
    <string name="device_info">Device Info</string>
    <string name="camera_test">Camera Test</string>
    <string name="audio_test">Audio Test</string>
    <string name="sensor_test">Sensor Test</string>
    <string name="battery_test">Battery Test</string>
    <string name="connectivity_test">Connectivity Test</string>
    <string name="display_test">Display Test</string>
    <string name="gps_test">GPS Test</string>
    <string name="vibration_test">Vibration Test</string>
    <string name="flashlight_test">Flashlight Test</string>
    <string name="run_test">Run Test</string>
    <string name="back">Back</string>
    <string name="test_passed">PASSED</string>
    <string name="test_failed">FAILED</string>
    <string name="testing">Testing…</string>
    <string name="test_complete">Test Complete</string>
    <string name="hardware_test">Hardware Test</string>
    <string name="todo">To Do</string>
    <string name="test_name">Test Name</string>
    <string name="TODO" />
    <string name="details">Details</string>
    <string name="result">Result</string>
    <string name="loading" />
    <string name="error_message" />
    <string name="retry" />
    <string name="app_logo" />
    <string name="running_test">Running Test…</string>
    <string name="run_test_again">Run Test Again</string>
</resources>